# nftables-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  release-plz.toml
.devcontainer/: Containerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust-fmt.yml  rust.yml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug Report.md  Discussion.md  Documentation.md  Misc.md  New Feature.md  Test.md
nftables/: Cargo.toml
nftables/resources/test/: nft-to-json.sh
nftables/resources/test/json/: basic.json
nftables/resources/test/nft/: nat.nft  space-keys.nft  workstation_combined.nft
nftables/src/: batch.rs  expr.rs  helper.rs  lib.rs  schema.rs  stmt.rs  types.rs
nftables/tests/: serialize.rs
nftables_dsl/: Cargo.toml
nftables_dsl/src/: lib.rs
nftables_dsl/tests/: dsl_tests.rs
resources/test/: nft-to-json.sh
resources/test/json/: basic.json  counter.json  flow.json  nat.json  nftables-init.json  setmap.json  space-keys.json  synproxy.json  tproxy.json  workstation.json  workstation_combined.json
resources/test/nft/: NOTICE  basic.nft  counter.nft  flow.nft  nftables-init.nft  setmap.nft  synproxy.nft  tproxy.nft  workstation.nft
src/: batch.rs  expr.rs  helper.rs  lib.rs  main.rs  schema.rs  stmt.rs  types.rs  visitor.rs
tests/: deserialize.rs  helper_tests.rs  json_tests.rs  run_nft_tests.sh  serialize.rs
