[package]
edition = "2021"
name = "nftables"
version = "0.4.0"
license = "MIT OR Apache-2.0"
description = "Safe abstraction for nftables JSON API. It can be used to create nftables rulesets in Rust and parse existing nftables rulesets from JSON."
homepage = "https://namib.me/"
repository = "https://github.com/namib-project/nftables-rs"
readme = "README.md"
keywords = ["nftables", "netfilter", "firewall"]
categories = ["os", "network-programming"]
exclude = [
    ".github/*",
    "cliff.toml",
    "release-plz.toml",
]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
serde_path_to_error = "0.1"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0"

[dev-dependencies]
serial_test = "3.0.0"
