[package]
edition = "2021"
name = "nftables"
version = "0.5.0"
license = "MIT OR Apache-2.0"
description = "Safe abstraction for nftables JSON API. It can be used to create nftables rulesets in Rust and parse existing nftables rulesets from JSON."
homepage = "https://namib.me/"
repository = "https://github.com/namib-project/nftables-rs"
readme = "README.md"
keywords = ["nftables", "netfilter", "firewall"]
categories = ["os", "network-programming"]
exclude = [
    ".devcontainer/*",
    ".github/*",
    "cliff.toml",
    "release-plz.toml",
]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
serde_path_to_error = "0.1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.65"

[dev-dependencies]
serial_test = "3.1.0"
