[package]
name = "nftables"
version = "0.5.0"
authors = ["Jasper Wiegratz <wiegratz@uni-bremen.de>", "Jan Romann <jan.romann@uni-bremen.de>"]
edition = "2021"
rust-version = "1.65"
description = "Safe abstraction for nftables JSON API. It can be used to create nftables rulesets in Rust and parse existing nftables rulesets from JSON."
repository = "https://github.com/namib-project/nftables-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["nftables", "netfilter", "firewall"]
categories = ["os", "network-programming"]
exclude = [
    ".devcontainer/*",
    ".github/*",
    "cliff.toml",
    "release-plz.toml",
]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
serde_path_to_error = "0.1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.8"

[dev-dependencies]
datatest-stable = "0.2.10"
serial_test = "3.2.0"

[[test]]
name = "deserialize"
harness = false
